# ebs-task-management-system

./: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  postgresql.conf  pyproject.toml  requirements.txt
.github/workflows/: django_lint_test.yml
apps/common/: tests.py
apps/common/fixtures/: comments.json  tasks.json  time_logs.json  users.json
apps/tasks/: admin.py  documents.py  filters.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/tasks/management/commands/: populate_data.py  send_weekly_report.py
apps/tasks/migrations/: 0001_initial.py  0002_remove_task_user_task_assigned_to_task_created_by.py  0003_remove_task_assigned_to_remove_task_created_by_and_more.py  0004_comment.py  0005_timelog.py  0006_remove_timelog_date_remove_timelog_duration.py  0007_timelog_duration.py  0008_remove_task_is_completed_task_status_and_more.py  0009_alter_task_status.py  0010_attachment.py  0011_attachment_status_alter_attachment_file.py  0012_attachment_name.py  0013_attachment_created_at.py  0014_attachment_size.py
apps/tasks/templates/emails/: weekly_report.html
apps/tasks/utils/: email_notifications.py  task_report_helpers.py  tasks.py
apps/users/: models.py  serializers.py  tests.py  urls.py  views.py
apps/users/authentication/: context.py  strategies.py
apps/users/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
config/management/commands/: initialize_buckets.py  wait_for_db.py
