[tool.poetry]
name = "ebs-task-management-system"
version = "0.1.0"
description = ""
authors = ["JCernei <jonnycernei@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.1"
django-filter = "24.3"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
drf-spectacular = "0.27.2"
python-dotenv = "^1.0.1"
django-redis = "^5.4.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
