[tool.poetry]
name = "ebs-task-management-system"
version = "0.1.0"
description = ""
authors = ["JCernei <jonnycernei@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.1"
django-filter = "24.3"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
drf-spectacular = "0.27.2"
python-dotenv = "^1.0.1"
django-redis = "^5.4.0"
psycopg2-binary = "^2.9.10"
faker = "^30.8.1"
setuptools = "^75.3.0"
gunicorn = "^23.0.0"
coverage = "^7.6.3"
django-minio-backend = "^3.7.2"
celery = "^5.4.0"
django-elasticsearch-dsl = "^8.0"
django-allauth = "0.61.1"
dj-rest-auth = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "*/__init__.py",
    "*/settings.py",
    "config/asgi.py",
    "config/wsgi.py",
    "apps/common/permissions.py",
    "apps/common/validators.py",
    "manage.py",
    "apps/tasks/admin.py",
    "*/management/*"
]